Add download links

--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
         <title>eAadhaar files</title>
     </head>
     <body>
+        <a href="https://github.com/lampkicking/yoti-app-android/files/3054788/fakeAadhaarValid-1.zip">fakeAadhaarValid.zip</a>
+        <br>
+        <a href="https://github.com/lampkicking/yoti-app-android/files/3054784/OfflineAadhaarYOB2.zip">OfflineAadhaarYOB2.zip</a>
     </body>
 </html>
